--- a/README
+++ b/README
@@ -124,9 +124,6 @@ note:
     File of notes and a way to query them
 path-grep:
     Find an executable in path
-perl:
-    Set process name of perl process to script name. Usefull when run
-    via /usr/bin/env
 perl-install-deps-for-module:
     Install all CPAN dependencies for a module
 perl-install-latest-stable-perl:
@@ -144,6 +141,9 @@ perl-module-find:
     Find a perl module or script
 perl-module-version:
     Print version of an installed perl module
+perl-named-process:
+    Set process name of perl process to script name. Usefull when run
+    via /usr/bin/env
 perl-profile:
     Profile a perl app and display the html results
 perl-setup-local-lib:
