--- a/README
+++ b/README
@@ -131,6 +131,8 @@ note:
     File of notes and a way to query them
 path-grep:
     Find an executable in path
+perl-force-stacktrace:
+    Force stracktrace output from a perl script
 perl-install-deps-for-module:
     Install all CPAN dependencies for a module
 perl-install-latest-stable-perl:
