--- a/README
+++ b/README
@@ -237,6 +237,8 @@ vi-from-history:
     Search eternal history for an existing file an open it in vi
 vi-from-path:
     Find an executable in the path and edit it
+vi-from-perl-inc:
+    Find an executable in the perl %INC and edit it
 vnc-server-setup-upstart-script:
     Setup remote desktop access via ssh and vnc right from the login
     screen of
