--- a/README
+++ b/README
@@ -101,6 +101,8 @@ find-older-than-days:
     Recursively find files oder than days
 find-or-grep:
     Find a file or grep stdin
+git:
+    Default options for git commands
 git-env-validate:
     Ensure git-scm is configured appropriately
 git-reset-head:
@@ -182,6 +184,9 @@ perl-module-version:
 perl-named-process:
     Set process name of perl process to script name. Usefull when run
     via /usr/bin/env
+perl-plack-test-server:
+    Start a plack server for debugging with autoreloading of changed
+    files
 perl-profile:
     Profile a perl app and display the html results
 perl-upgrade-outdated-modules:
