--- a/README
+++ b/README
@@ -111,6 +111,8 @@ git-reset-head-to:
     Discard commits dating back to specified commit
 git-reset-origin:
     Discard all current changes in directory to origin/master
+git-root:
+    Print git project root
 gnome-send-to-mail-images:
     Resize one or more images and add them as attachements
 grep-and:
