--- a/README
+++ b/README
@@ -163,8 +163,6 @@ path-grep:
     Find an executable in path
 perl-force-stacktrace:
     Force stracktrace output from a perl script
-perl-install-cpanm:
-    Setup user dir for cpan perl libs using local::lib and cpanm
 perl-install-deps-for-module:
     Install all CPAN dependencies for a module
 perl-install-latest-stable-perl:
@@ -193,6 +191,8 @@ perl-plack-test-server:
     files
 perl-profile:
     Profile a perl app and display the html results
+perl-setup-environment:
+    Setup home directory based perl environment
 perl-upgrade-outdated-modules:
     Upgrade installed perl modules if a new version is available
 prompt-dir:
