--- a/README
+++ b/README
@@ -135,6 +135,8 @@ java-decompile-jar:
     Recursively decompile a jar including contained jars
 js-format-using-prettydiff:
     Javascript formatter using "npm install prettydiff"
+js-setup-environment:
+    Setup javascript environment
 json-tidy:
     Tidy a json file and sort hash keys to make the output diffable
 keyboard-disable-caps-lock-console:
