--- a/README
+++ b/README
@@ -289,6 +289,11 @@ vi-from-path:
     Find an executable in the path and edit it
 vi-from-perl-inc:
     Find an executable in the perl %INC and edit it
+video-dvd-rip:
+    Rip and transcode a video dvd
+video-transcode:
+    Transcode a media file to x264 preserving all video, audio and
+    subtitle tracks
 vim-setup:
     Setup vim environment
 vnc-server-setup-upstart-script:
