--- a/README
+++ b/README
@@ -171,6 +171,8 @@ net-open-ports:
     List all open ports
 net-scan-private-network:
     Scan for hosts in private network
+node-install:
+    Install latest node version
 note:
     File of notes and a way to query them
 once:
