--- a/README
+++ b/README
@@ -61,6 +61,8 @@ bytes-from-human:
     Convert a size from human friendly to bytes
 bytes-to-human:
     Convert a size of bytes to human friendly
+clear-with-scrollback:
+    Clear screen including scrollback buffer
 command-knows-switch:
     Check if an app supports specified switch
 cp-merge-directories:
