--- a/README
+++ b/README
@@ -116,6 +116,8 @@ git:
     Default options for git commands
 git-env-validate:
     Ensure git-scm is configured appropriately
+git-ignore:
+    Download and save a default .gitignore for a specific environment
 git-project:
     Print git project root dir name
 git-reset-head:
@@ -149,6 +151,8 @@ iptables-port-redirect:
     Forward an incoming port to a different port
 java-decompile-jar:
     Recursively decompile a jar including contained jars
+jo:
+    TODO
 js-format-using-prettydiff:
     Javascript formatter using "npm install prettydiff"
 json-tidy:
