--- a/README
+++ b/README
@@ -28,6 +28,10 @@ apt-unhold-package:
     Return a deb package to its default upgrade state
 archive:
     Archive a file appending a timestamp
+audio-ogg-from-any:
+    Convert any audio file to ogg
+audio-split-by-cue:
+    Split an album audio file into several tracks using a cue file
 bak:
     Backup a file appending a timestamp
 bash-background-jobs-count:
