--- a/README
+++ b/README
@@ -75,7 +75,7 @@ cp-merge-directories:
 cpanm:
     Allow cpanm to install modules specified via Path/File.pm
 cpanm-install:
-    Setup home directory based perl environment
+    Setup home directory based perl environment and cpanm
 crontab-setup:
     Add default crontab settings to existing crontab
 csvview:
@@ -305,12 +305,16 @@ top-mem:
     View top ordered by memory usage
 tree:
     List a directory as a tree
+ubuntu-setup:
+    Stuff to do after a new ubuntu installation
 uniq-unsorted:
     uniq replacement without the need for sorted input
 unix2dos:
     Convert line endings from unix to dos
 url:
     Print absolute SSH url of a file or directory
+user-add:
+    Add a new user to the system without hassle
 vi:
     Setup and run vim
 vi-choose-file-from-list:
