--- a/README
+++ b/README
@@ -102,6 +102,8 @@ env-grep:
     Grep environment
 env-show:
     Display infos about the system
+file-add-line-if-new:
+    Add a line to a file if a line matching regex is not found
 file-compress-if-size-reaches:
     Compress a file depending on size
 file-template-filler:
@@ -140,6 +142,8 @@ gnome-send-to-mail-images:
     Resize one or more images and add them as attachements
 gnome-send-to-mail-images-setup:
     Download and setup gnome-send-to-mail-images
+gotroot:
+    Make sure we're running as root
 grep-and:
     Search for lines matching one or more perl regex patterns
 grep-before:
@@ -315,6 +319,8 @@ tree:
     List a directory as a tree
 ubuntu-setup:
     Stuff to do after a new ubuntu installation
+ubuntu-setup-automatic-updates:
+    Make sure update and backports soures are activated
 uniq-unsorted:
     uniq replacement without the need for sorted input
 unix2dos:
