--- a/README
+++ b/README
@@ -291,6 +291,8 @@ shell-line-wrap-on:
     Turn off shell line wrapping
 shell-open-access-on-freeport:
     Create shell access on a free port
+sort-by-path-depth:
+    Sort input by depth of path
 ssh-agent-env-clear:
     Remove connection to ssh-agent
 ssh-agent-env-grab:
